# SteamCloudFileManager

./: .gitignore  .yamlfmt  .yamllint  CONTRIBUTING.md  Cargo.toml  I18N_GUIDE.md  LICENSE  README.en.md  README.md  ROOT_PATH_MAPPING.md  SECURITY.md  build.rs  debug_file_list_1057090_p1.html  debug_file_list_1057090_p2.html  debug_file_list_1057090_p3.html  debug_game_list.html  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  root_mapping.yml
.github/workflows/: auto-merge.yml  build.yml  ci.yml  codeql.yml  pr.yml  release.yml  update-aur.yml  update-homebrew.yml
assets/: AppIcon.icns  config_template.toml  steam-cloud-file-manager.desktop  steam_cloud.sketch  steamcloudfilemanager.desktop
assets/steam_cloud.icon/: icon.json
scripts/: update_linux.sh  update_macos.sh  update_windows.ps1
scripts/packaging/aur/: .SRCINFO.template  PKGBUILD.template  generate-pkgbuild.sh
scripts/packaging/homebrew/: cask-template.rb  formula-template.rb  generate-cask.sh  generate-formula.sh
src/: app.rs  app_handlers.rs  app_state.rs  appinfo_writer.rs  async_handlers.rs  backup.rs  cdp_client.rs  config.rs  conflict.rs  downloader.rs  error.rs  file_manager.rs  file_tree.rs  game_scanner.rs  i18n.rs  icons.rs  logger.rs  main.rs  path_resolver.rs  steam_api.rs  steam_process.rs  steam_worker.rs  symlink_manager.rs  ufs_dump.rs  ufs_text.rs  update.rs  user_manager.rs  utils.rs  vdf_parser.rs  version.rs
src/i18n/: en.rs  mod.rs  zh.rs
src/ui/: action_buttons.rs  app_panels.rs  app_views.rs  appinfo_dialog.rs  backup_dialog.rs  conflict_dialog.rs  controls.rs  file_list.rs  font_loader.rs  guide_dialog.rs  helpers.rs  mod.rs  panels.rs  selectors.rs  settings.rs  status_bar.rs  symlink_dialog.rs  theme.rs  tree_view.rs  upload_dialog.rs  windows.rs
