[package]
name = "SteamCloudFileManager"
version = "0.1.6-beta"
edition = "2021"
authors = ["Flacier <https://github.com/Fldicoahkiin>"]
description = "Steam云文件管理器 - Steam Cloud File Manager"
license = "GPL-3.0"
repository = "https://github.com/Fldicoahkiin/SteamCloudFileManager"
build = "build.rs"

[build-dependencies]
chrono = "0.4.42"

# macOS bundle configuration (cargo-bundle)
[package.metadata.bundle]
name = "Steam Cloud File Manager"
identifier = "com.flacier.steamcloudfilemanager"
icon = ["assets/AppIcon.icns"]
copyright = "Copyright © 2025 Flacier. All rights reserved."
category = "Utility"
short_description = "Steam云文件管理器"
long_description = "Steam Cloud File Manager - 管理和查看 Steam 云存档文件的实用工具。支持查看游戏云存档列表、文件详情、下载和上传云存档文件。"
osx_minimum_system_version = "10.13"

# Debian package configuration (cargo-deb)
[package.metadata.deb]
maintainer = "Flacier <https://github.com/Fldicoahkiin>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/SteamCloudFileManager", "usr/bin/steamcloudfilemanager", "755"],
    ["assets/steamcloudfilemanager.desktop", "usr/share/applications/", "644"],
    ["assets/steam_cloud-macOS-Default-1024x1024@1x.png", "usr/share/icons/hicolor/512x512/apps/steamcloudfilemanager.png", "644"],
    ["README.md", "usr/share/doc/steamcloudfilemanager/", "644"],
]

# RPM package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/SteamCloudFileManager", dest = "/usr/bin/steamcloudfilemanager", mode = "755" },
    { source = "assets/steamcloudfilemanager.desktop", dest = "/usr/share/applications/steamcloudfilemanager.desktop", mode = "644" },
    { source = "assets/steam_cloud-macOS-Default-1024x1024@1x.png", dest = "/usr/share/icons/hicolor/512x512/apps/steamcloudfilemanager.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/steamcloudfilemanager/README.md", mode = "644", doc = true },
]

[dependencies]
# UI Framework
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = { version = "0.33.2", features = ["all_loaders"] }

# Steam API
steamworks = "0.12.2"
steamworks-sys = "0.12.2"

# Utilities
anyhow = "1.0.100"
byteorder = "1.5.0"
dirs = "6.0.0"
image = "0.25.9"
regex = "1.12.2"
rfd = "0.16.0"
sysinfo = "0.37.2"
url = "2.5.7"

# Serialization
keyvalues-parser = "0.2.1"
serde = "1.0.228"
serde_json = "1.0.145"

# Date and Time
chrono = "0.4.42"

# Logging
env_logger = "0.11.8"
log = "0.4.29"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Network
tungstenite = { version = "0.28.0", features = ["native-tls"] }
ureq = "3.1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "shellapi",
    "combaseapi",
    "shlobj",
    "knownfolders",
] }

# Windows specific
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
