[package]
name = "steam-cloud-file-manager"
version = "1.2.2"
edition = "2024"
authors = ["Flacier <https://github.com/Fldicoahkiin>"]
description = "Steam云文件管理器 - Steam Cloud File Manager"
license = "GPL-3.0"
repository = "https://github.com/Fldicoahkiin/SteamCloudFileManager"
build = "build.rs"

[[bin]]
name = "SteamCloudFileManager"
path = "src/main.rs"

[build-dependencies]
chrono = "0.4.42"

# macOS bundle configuration (cargo-bundle)
[package.metadata.bundle]
name = "Steam Cloud File Manager"
identifier = "com.flacier.steamcloudfilemanager"
icon = ["assets/AppIcon.icns"]
copyright = "Copyright © 2026 Flacier. All rights reserved."
category = "Utility"
short_description = "Steam云文件管理器"
long_description = "Steam Cloud File Manager - 管理和查看 Steam 云存档文件的实用工具。支持查看游戏云存档列表、文件详情、下载和上传云存档文件。"
osx_minimum_system_version = "10.13"

# Debian package configuration (cargo-deb)
[package.metadata.deb]
name = "steam-cloud-file-manager"
maintainer = "Flacier <https://github.com/Fldicoahkiin>"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/SteamCloudFileManager",
        "usr/bin/steam-cloud-file-manager",
        "755",
    ],
    [
        "target/release/libsteam_api.so",
        "usr/lib/steam-cloud-file-manager/libsteam_api.so",
        "644",
    ],
    [
        "assets/steam-cloud-file-manager.desktop",
        "usr/share/applications/",
        "644",
    ],
    [
        "assets/steam_cloud-macOS-Default-1024x1024@1x.png",
        "usr/share/icons/hicolor/512x512/apps/steam-cloud-file-manager.png",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/steam-cloud-file-manager/",
        "644",
    ],
]

# RPM package configuration (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/SteamCloudFileManager", dest = "/usr/bin/steam-cloud-file-manager", mode = "755" },
    { source = "target/release/libsteam_api.so", dest = "/usr/lib64/steam-cloud-file-manager/libsteam_api.so", mode = "644" },
    { source = "assets/steam-cloud-file-manager.desktop", dest = "/usr/share/applications/steam-cloud-file-manager.desktop", mode = "644" },
    { source = "assets/steam_cloud-macOS-Default-1024x1024@1x.png", dest = "/usr/share/icons/hicolor/512x512/apps/steam-cloud-file-manager.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/steam-cloud-file-manager/README.md", mode = "644", doc = true },
]

# AppImage configuration (cargo-appimage)
[package.metadata.appimage]
icon = "assets/steam_cloud-macOS-Default-1024x1024@1x.png"
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libgcc_s.so*",
    "libm.so*",
    "librt.so*",
    "ld-linux*.so*",
]
assets = [
    "target/release/libsteam_api.so",
]

# Arch Linux AUR configuration (cargo-aur)
[package.metadata.aur]
depends = ["gtk3", "webkit2gtk"]
optdepends = ["steam: Steam client integration"]
files = [
    [
        "target/release/SteamCloudFileManager",
        "/usr/bin/steam-cloud-file-manager",
        "755",
    ],
    [
        "assets/steam-cloud-file-manager.desktop",
        "/usr/share/applications/",
        "644",
    ],
    [
        "assets/steam_cloud-macOS-Default-1024x1024@1x.png",
        "/usr/share/icons/hicolor/512x512/apps/steam-cloud-file-manager.png",
        "644",
    ],
]

[dependencies]
# UI Framework
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui-phosphor = "0.11.0"

# Steam API
steamworks = "0.12.2"
steamworks-sys = "0.12.2"

# Utilities
anyhow = "1.0.100"
byteorder = "1.5.0"
image = "0.25.9"
open = "5.3.3"
regex = "1.12.2"
rfd = "0.17.1"
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.10"

# Date and Time
chrono = "0.4.42"

# UUID and Directories
uuid = { version = "1.19.0", features = ["v4"] }
dirs = "6.0.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Network
tungstenite = { version = "0.28.0", features = ["native-tls"] }
ureq = "3.1.4"
sha1 = "0.10.6"

# Auto Update (https://crates.io/crates/self_update)
self_update = { version = "0.42.0", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "shellapi",
    "combaseapi",
    "shlobj",
    "knownfolders",
    "winbase",
    "tlhelp32",
    "handleapi",
    "winreg",
] }

# Windows specific
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
